Display the empty section if needed

The ContentSuggestions empty sections can be displayed if their section
info allow them to.
For now they are only displayed if they are started at the opening of
the NTP. This CL fixes it by adding them if needed.

Bug: 765075
Change-Id: Ieb8dde40d14044bfb674bcd9108b84775d1b4531
Reviewed-on: https://chromium-review.googlesource.com/671021
Reviewed-by: Olivier Robin <olivierrobin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#502833}